# eCommerce

./: .coveragerc  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
account/admin/: __init__.py  address.py  corporateprofile.py  personal_profile.py
account/api/: urls.py
account/migrations/: 0001_initial.py  0002_alter_address_created_alter_address_modified_and_more.py  0003_alter_address_address_line_1_and_more.py  0004_alter_corporateprofile_economical_code_and_more.py  0005_alter_personalprofile_phone.py
account/models/: __init__.py  address.py  corporateprofile.py  personal_profile.py  user_profile.py
blog/admin/: __init__.py  category.py  comment.py  post.py
blog/models/: __init__.py  category.py  comment.py  post.py
config/log/: config.toml
config/swagger/: __init__.py  swagger.py
docs/: commands.md
docs/database/: database.sql  ecommerce.dbml
kernel/: asgi.py  settings.py  urls.py  wsgi.py
painless/: apps.py
painless/models/: __init__.py  common.py
services/otp/: apps.py
services/payment/: apps.py
shop/admin/: __init__.py  cart.py  cart_item.py  order.py  order_address.py
shop/api/: urls.py
shop/helper/: __init__.py  consts.py
shop/migrations/: 0001_initial.py  0002_orderaddress_slug_alter_cart_created_and_more.py  0003_alter_orderaddress_house_number.py  0004_alter_orderaddress_building_unit_and_more.py
shop/models/: __init__.py  cart.py  cart_item.py  coupon.py  order.py  order_address.py
templates/: redirect_to_bank.html
(+120 files in other folders)
